--- a/style.css
+++ b/style.css
@@ -386,6 +386,7 @@ body {
 }
 
 .hero-content h2 {
+  position: relative;
   font-size: 70px;
   font-weight: 600;
   color: #000;
@@ -447,13 +448,14 @@ body {
   left: -5px;
   height: 290px; /* Adjust based on the desired drop length */
   width: 170px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), #F3F1E6); /* Gradient path */
-  box-shadow: 0px 0px 20px 8px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(to bottom, rgb(217, 217, 217, 0.8), #F3F1E6); /* Gradient path */
+  
   z-index: 0;
   opacity: 0;
   border-bottom-left-radius: 100px; /* Adjust the radius as desired */
   border-bottom-right-radius: 100px;
-  filter: drop-shadow(0 0 50px rgba(0, 0, 0, 0.1));
+  box-shadow: 0px 0px 20px 8px rgba(0, 0, 0, 0.1);
+  filter: blur(5px);
   animation: pathReveal 1s ease-out forwards;
 }
 
