--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ body {
   font-family: Arial, sans-serif;
   max-width: 1560px; /* Limit maximum width */
   margin: 0 auto;
+  overflow: hidden;
 }
 
 .hero-content {
@@ -411,6 +412,41 @@ body {
 
 .hero-content h2 span {
   color: #ffb000;
+}
+
+.hero-title{
+  opacity: 0; /* Start hidden */
+  transform: translateY(150px); /* Start 100px below its original position */
+  animation: slideUp 2s cubic-bezier(0.22, 1, 0.36, 1) forwards; /* Smooth slide */
+}
+
+.sub-title,.cssbuttons-io-button{
+  opacity: 0; /* Start hidden */
+  transform: translateY(90px); /* Start 100px below its original position */
+  animation: slide-Up 1.5s cubic-bezier(0.22, 1, 0.36, 1) forwards; /* Smooth slide */
+  animation-delay: 0.5s;
+}
+
+@keyframes slide-Up {
+  0% {
+    opacity: 0;
+    transform: translateY(90px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(150px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .hero-content h2 span:hover {
@@ -456,6 +492,7 @@ body {
   opacity: 0; /* Initially hidden */
   z-index: 9;
   animation: appear 1s ease-out forwards, drop 0.8s ease-out 0.7s forwards;
+  animation-delay: 1s;
 }
 
 .path-background {
@@ -466,12 +503,13 @@ body {
   width: 170px;
   background: linear-gradient(to bottom, rgb(217, 217, 217, 0.8), #F3F1E6); /* Gradient path */
   z-index: -10;
-  opacity: 1;
+  opacity: 0;
   border-bottom-left-radius: 100px; /* Adjust the radius as desired */
   border-bottom-right-radius: 100px;
   box-shadow: 0px 0px 20px 8px rgba(0, 0, 0, 0.1);
   filter: blur(5px);
-  animation: pathReveal 1.5s ease-out forwards;
+  animation: pathReveal 0.8s ease-out forwards;
+  animation-delay: 1s;
 }
 
 /* Path reveal effect */
@@ -614,6 +652,20 @@ body {
 }
 .hero-image img {
   max-width: 100%;
+  clip-path: inset(0 100% 0 0); /* Initial clip to hide from the right */
+  animation: clipReveal 1.5s ease-out forwards;
+  filter: blur(5px);
+}
+
+@keyframes clipReveal {
+  0% {
+    filter: blur(5px);
+    clip-path: inset(0 100% 0 0); /* Fully hidden from the right */
+  }
+  100% {
+    clip-path: inset(0 0 0 0); /* Fully revealed */
+    filter: blur(0);
+  }
 }
 
 @media (max-width: 768px) {
